Resolves: tdf#101457 gtk3 clipboards have to live to end once created

was Related: rhbz#1351369 gtk3 clipboards have to live to end once created

like the other platforms do

(cherry picked from commit 962e0bb4b31265b046fe4fb57d3087e20f5fe4ef)

Change-Id: I31340254573d13dc808d1e3038e3a36ae97f6c22
Reviewed-on: https://gerrit.libreoffice.org/30010
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>