vcl/inc/unx/gtk/gtkinst.hxx
@@ -248,6 +248,9 @@ public:
 
 private:
     std::vector<GtkSalTimer *>  m_aTimers;
+#if GTK_CHECK_VERSION(3,0,0)
+    std::unordered_map< GdkAtom, css::uno::Reference<css::uno::XInterface> > m_aClipboards;
+#endif
     bool                        IsTimerExpired();
     bool                        bNeedsInit;
     cairo_font_options_t*       m_pLastCairoFontOptions;
